# dungeonsnpipes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: dag_extract_spells.py
conf/: core-site.xml  metastore-site.xml
dags/: dag_extract_spells.py
dungeonsnpipes/: main.py
dungeonsnpipes/dags/: dag_extract_spells.py
dungeonsnpipes/extract/: api_extractor.py
dungeonsnpipes/transform/: transform.py
mage/: Dockerfile.spells  Dockerfile.spells-extract  Dockerfile.spells-transform  Makefile  requirements.txt
mysqlmetastore/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysqlmetastore/#innodb_redo/: #ib_redo10  #ib_redo9
mysqlmetastore/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysqlmetastore/metastore/: aux_table.ibd  bucketing_cols.ibd  cds.ibd  columns_v2.ibd  compaction_queue.ibd  completed_compactions.ibd  completed_txn_components.ibd  ctlgs.ibd  db_privs.ibd  dbs.ibd  delegation_tokens.ibd  func_ru.ibd  funcs.ibd  global_privs.ibd  hive_locks.ibd  i_schema.ibd  idxs.ibd  index_params.ibd  key_constraints.ibd  master_keys.ibd  metastore_db_properties.ibd  min_history_level.ibd  mv_creation_metadata.ibd  mv_tables_used.ibd  next_compaction_queue_id.ibd  next_lock_id.ibd  next_txn_id.ibd  next_write_id.ibd  part_privs.ibd  (+43 more)
trino/: config.properties
(+140 files in other folders)
